crates/iota/src/unit_tests/snapshots/iota__upgrade_compatibility__upgrade_compatibility_tests__empty.snap
---
source: crates/iota/src/unit_tests/upgrade_compatibility_tests.rs
expression: output
---
error[Compatibility E01006]: module missing
  ┌─ /Users/jordanjennings/code/iota/crates/iota/src/unit_tests/fixtures/upgrade_errors/missing_module_toml/empty/Move.toml:1:1
  │
1 │ 
  │ ^ Package is missing module 'identifier'
  │
  = Modules which are part package cannot be removed during an upgrade.
  = add missing module 'identifier' back to the package.
